# dxcode

./: .gitignore  CLOUDFLARE.md  PUBLISH.md  README.md  SPEC.md  install.sh
.github/workflows/: publish.yml
examples/: example.js  example.py
homebrew/: README.md  dxcode-cli.rb
implementations/c/: README.md  dxcode.c  dxcode.h
implementations/go/: README.md  dxcode.go  dxcode_test.go  go.mod
implementations/javascript/: README.md  dxcode.d.ts  dxcode.js  package-lock.json  package.json  test.js
implementations/javascript/cli/: README.md  index.js  package.json
implementations/python/: README.md  dxcode.py  setup.py  test_dxcode.py
implementations/rust/: Cargo.toml  README.md
implementations/rust/src/: lib.rs  main.rs
web/: .gitignore  package-lock.json  package.json  vercel.json
web/.vercel/output/functions/![-]/catchall.func/: .vc-config.json
web/.vercel/output/functions/![-]/catchall.func/.svelte-kit/vercel-tmp/: manifest.js
web/.vercel/output/static/: index.html
web/.vercel/output/static/_app/: version.json
web/.vercel/output/static/_app/immutable/assets/: 0.BHsTiCFn.css  2.Cm3XCvWX.css  2.CsuXtVO6.css  2.DIiM8oXU.css
web/.vercel/output/static/_app/immutable/chunks/: B57Yf1yB.js  BJJlB8Nq.js  B_q5yoId.js  CYpoGLy8.js  CcRiD6w9.js  Ccxja10T.js  CxJYBCDY.js  DCYk9I7Y.js  DGFekU3Z.js  DHDO6MWi.js  ESP3iqtt.js  JNqvVHYd.js  ssb-fEff.js  w5QO-qOe.js  y_RvwbGj.js
web/.vercel/output/static/_app/immutable/entry/: app.BeyI_d1p.js  app.Co05Z9xU.js  app.D0sxakDK.js  start.C7nNUB5t.js  start.DSrOjNeo.js  start.y0bcKD_k.js
web/.vercel/output/static/_app/immutable/nodes/: 0.6F2yWmh8.js  0.DVUDyX-_.js  1.ChGWTiTJ.js  1.DECHr2iP.js  1.XSvlMmqI.js  2.BDSWUiWG.js  2.CyCXDvQ4.js  2.mR91bv9w.js
web/src/: app.css  app.html
web/src/lib/: dxcode.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
web/src/routes/showcase/: +page.svelte
web/src/routes/view/: +page.svelte  +page.ts
(+9 files in other folders)
