[package]
name = "dxcode"
version = "2.1.0"
edition = "2021"
authors = ["Dogxi"]
description = "[dxcode] A distinctive, URL‑safe binary encoder with the signature `dx` prefix."
license = "MIT"
repository = "https://github.com/dogxii/dxcode"
homepage = "https://dxc.dogxi.me"
documentation = "https://docs.rs/dxcode"
readme = "README.md"
keywords = ["dxcode", "encoding", "decoding", "base64", "dogxi"]
categories = ["encoding", "no-std"]

[lib]
name = "dxcode"
path = "src/lib.rs"

[[bin]]
name = "dxc"
path = "src/main.rs"

[features]
default = ["std"]
std = []

[dependencies]
atty = "0.2"
flate2 = "1.0"

[dev-dependencies]
